--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@eslint/compat": "*",
     "@eslint/eslintrc": "^3.3.1",
     "@eslint/js": "*",
-    "@next/eslint-plugin-next": "15.5.3",
+    "@next/eslint-plugin-next": "^16.0.3",
     "@stylistic/eslint-plugin": "*",
     "@typescript-eslint/eslint-plugin": "*",
     "@typescript-eslint/parser": "*",
@@ -17,7 +17,7 @@
     "eslint-import-resolver-typescript": "^4.4.4",
     "eslint-plugin-boundaries": "^5.0.1",
     "eslint-plugin-canonical": "^5.1.3",
-    "eslint-plugin-de-morgan": "^1.3.1",
+    "eslint-plugin-de-morgan": "^2.0.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-jsonc": "^2.20.1",
@@ -29,11 +29,11 @@
     "eslint-plugin-prettier": "^5.5.4",
     "eslint-plugin-promise": "^7.2.1",
     "eslint-plugin-react": "^7.37.5",
-    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-regexp": "^2.10.0",
     "eslint-plugin-tailwindcss": "^3.18.2",
     "eslint-plugin-testing-library": "^7.8.0",
-    "eslint-plugin-unicorn": "^61.0.2",
+    "eslint-plugin-unicorn": "^62.0.0",
     "eslint-plugin-yml": "^1.18.0",
     "eslint-plugin-zod": "^1.4.0",
     "globals": "^16.4.0",
@@ -98,5 +98,5 @@
   },
   "type": "module",
   "types": "dist/index.d.ts",
-  "version": "2.5.0"
+  "version": "3.0.0"
 }
